# ru-gost-crypto-lab

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  codex-review.yml
iac/ansible/roles/web_gost_tls/tasks/: main.yml
iac/ansible/roles/web_gost_tls/templates/: nginx_gost.conf.j2
iac/docker-compose/: docker-compose.web.yml
lab_scenarios/web_portal_gov/: scenario.yaml
scripts/: dev_run_all_tests.sh  lint.sh  security_scan.sh
tests/integration/: test_lab_web_scenario_flow.py
tests/unit/: test_ai_provider_noop.py  test_compatibility_modules.py  test_config_loader.py  test_perf_modules.py  test_report_builder.py  test_scenario_loader.py
tools/: config_loader.py  scenario_loader.py
tools/ai/: ai_provider.py
tools/compatibility/: check_smime_clients.py  check_tls_clients.py  check_vpn_clients.py
tools/perf/: bench_tls_handshake.py  bench_tls_throughput.py  bench_vpn_throughput.py
tools/reports/: report_builder.py
